--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --why-rgb: 46, 204, 113;
+  --where-rgb: 243, 156, 18;
+  --what-spatial-rgb: 52, 152, 219;
+  --what-temporal-rgb: 155, 89, 182;
+  --what-file-rgb: 211, 84, 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -37,4 +42,67 @@ aside {
   color: rgb(var(--foreground-rgb));
   border-color: rgb(var(--foreground-rgb));
   border-left: 1px solid;
+}
+
+.option-block-group {
+  border-bottom: 1px solid;
+  border-color: rgb(var(--foreground-rgb));
+}
+
+.option-list {
+  max-height: 150px;
+  overflow-y: auto;
+  overflow-x: none;
+  padding: 5px;
+}
+
+.ontology-item {
+  border: 1px solid;
+  border-radius: 3px;
+  padding: 2px 4px;
+  margin-bottom: 2px;
+}
+
+.ontology-item.available {
+  background-color: rgba(var(--foreground-rgb), 0.3);
+}
+
+.why-blocks-container .ontology-item.available {
+  background-color: rgba(var(--why-rgb), 1);
+}
+
+.where-blocks-container .ontology-item.available {
+  background-color: rgba(var(--where-rgb), 1);
+}
+
+.what-blocks-container .ontology-item.available {
+  background-color: rgba(var(--what-spatial-rgb), 1);
+}
+
+.ontology-item.selected {
+  background-color: rgba(var(--foreground-rgb), 1);
+  color: #000;
+  border: 0;
+}
+
+.ontology-item.exists {
+  background-color: rgba(var(--foreground-rgb), 0.1);
+  cursor: not-allowed;
+}
+
+.option-block-group .ontology-item:hover {
+  background-color: rgba(var(--foreground-rgb), 0.1);
+  cursor: pointer;
+}
+
+.why-blocks-container .ontology-item {
+  border-color: rgb(var(--why-rgb));
+}
+
+.where-blocks-container .ontology-item {
+  border-color: rgb(var(--where-rgb));
+}
+
+.what-blocks-container .ontology-item {
+  border-color: rgb(var(--what-spatial-rgb));
 }
