--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -47,6 +47,7 @@
     background: $white-100;
     padding: 12px;
     border-radius: $border-radius-default;
+    box-shadow: $box-shadow-inset;
 
     h2 {
         margin-bottom: 12px;
