--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -109,6 +109,12 @@
     padding-left: 20px;
     margin-left: -24px;
 
+    @media (max-width: 768px) {
+        align-items: flex-start;
+        justify-content: space-between;
+        width: 100%;
+    }
+
     .pill {
         border: 2px solid;
         margin-bottom: 4px;
