--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -26,7 +26,12 @@ $red-dark: rgba(172, 69, 0, 1);
 $blue: rgba(52, 152, 219, 1);
 $blue-dark: rgba(45, 132, 190, 1);
 
+$teal: rgba(26, 188, 156, 1);
+$teal-dark: rgba(22, 160, 133, 1);
+
+
 // App colors
+$primary-color: $teal;
 $background-rgb: $white;
 $foreground-rgb: $black;
 $background-start-rgb: $white;
