--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -263,3 +263,45 @@
     background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
     background-attachment: local, local, scroll, scroll;
 }
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 50;
+    overflow: auto;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .modal-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+
+        padding: 16px;
+        border-radius: $border-radius-default;
+        box-shadow: $box-shadow-default;
+        background: $white;
+        width: 100%;
+        max-width: 600px;
+
+        a {
+            align-self: flex-end;
+        }
+    }
+
+    h3 {
+        margin-bottom: 12px;
+    }
+
+    p {
+        margin-bottom: 12px;
+    }
+
+}
