--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -29,6 +29,12 @@ $blue-dark: rgba(45, 132, 190, 1);
 $teal: rgba(26, 188, 156, 1);
 $teal-dark: rgba(22, 160, 133, 1);
 
+$orange: rgba(230, 126, 34, 1);
+$orange-dark: rgba(211, 84, 0, 1);
+
+$fake: $red;
+$real: $green;
+$sus: $orange;
 
 // App colors
 $primary-color: $teal;
