--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -279,6 +279,18 @@
     justify-content: center;
     align-items: center;
 
+    .modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        align-items: center;
+        margin-bottom: 12px;
+
+        h3 {
+            font-weight: 600;
+        }
+    }
+
     .modal-content {
         display: flex;
         flex-direction: column;
@@ -296,12 +308,48 @@
         }
     }
 
-    h3 {
-        margin-bottom: 12px;
-    }
-
     p {
         margin-bottom: 12px;
     }
 
+    .modal-input-area {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        margin-bottom: 8px;
+
+        background-color: $white-100;
+        padding: 8px;
+        border-radius: $border-radius-default;
+    }
+
+    .analytic-item-accuracy {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        margin-bottom: 8px;
+
+        .pill {
+            font-weight: 600;
+            font-size: 1.1em;
+        }
+    }
+}
+
+.analytic-item-description {
+    color: $black-700;
+    margin-bottom: 8px;
+}
+
+.analytic-item-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 8px;
+    border-top: 1px solid $white-200;
+    border-radius: 0 0 $border-radius-default $border-radius-default;
+
+    .pill {
+        margin-right: 4px;
+    }
 }
