--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -41,6 +41,18 @@
             }
         }
     }
+
+    &.search {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 12px;
+
+        input {
+            flex: 1;
+            margin-right: 8px;
+        }
+    }
 }
 
 .analytics-container {
