added reset, minor fixes

--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -42,6 +42,14 @@
         }
     }
 
+    >div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 8px;
+        margin-bottom: 12px;
+    }
+
     &.search {
         display: flex;
         justify-content: space-between;
