--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -122,18 +122,18 @@
 
 .option-block-group {
     display: flex;
-    flex-wrap: wrap;
+    align-items: flex-start;
     margin-bottom: 12px;
 
     border-left: 4px solid transparent;
     padding-left: 20px;
     margin-left: -24px;
 
-    @media (max-width: 768px) {
-        align-items: flex-start;
-        justify-content: space-between;
-        width: 100%;
+    @media (max-width: 1100px) {
+        overflow-x: auto;
+        max-width: 640px;
     }
+
 
     .pill {
         border: 2px solid;
