--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -385,3 +385,22 @@
         margin-right: 4px;
     }
 }
+
+.analytic-item-response {
+    max-width: 1024px;
+
+    .metadata-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        margin-bottom: 12px;
+    }
+
+    img {
+        max-height: 460px;
+        width: auto;
+        max-width: 100%;
+        height: auto;
+        margin-bottom: 12px;
+    }
+}
