--- a/src/app/styles/animations.scss
+++ b/src/app/styles/animations.scss
@@ -57,3 +57,15 @@ $animation-direction: normal;
         opacity: 0;
     }
 }
+
+@keyframes scaleIn {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
