--- a/src/app/styles/components.scss
+++ b/src/app/styles/components.scss
@@ -243,6 +243,7 @@
     grid-auto-flow: column;
     grid-auto-columns: max-content;
     gap: 4px;
+    position: relative;
 
     h2 {
         font-size: 1em;
@@ -250,7 +251,7 @@
 
     .pill {
         &.available {
-            ~:not(.available):not(.selected) {
+            ~li:not(.available):not(.selected) {
                 opacity: 0.5;
             }
         }
@@ -407,19 +408,18 @@
 }
 
 .tooltip-content {
-    background: white;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     padding: 8px 12px;
     border-radius: $border-radius-default;
     box-shadow: $box-shadow-default;
     border: 1px solid $border-color;
     animation-duration: 0.6s;
-    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1)
-}
-
-.tooltip-content[data-side='up'] {
-    animation-name: fadeOut;
-}
-
-.tooltip-content[data-side='down'] {
-    animation-name: fadeIn;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    max-width: 80%;
+    width: min(var(--radix-popper-available-width), 600px);
+    transform-origin: var(--radix-tooltip-content-transform-origin);
+    animation: scaleIn 0.5s ease-out;
+    z-index: 1;
 }
