--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,3 +1,11 @@
+// Varuna Ontology (c) by DeFake Project
+// 
+// Varuna Ontology is licensed under a
+// Creative Commons Attribution 4.0 International License.
+// 
+// You should have received a copy of the license along with this
+// work. If not, see <https://creativecommons.org/licenses/by/4.0/>.
+
 $box-shadow-default: 0 2px 4px rgba(0, 0, 0, 0.1);
 $box-shadow-hover: 0 4px 8px rgba(0, 0, 0, 0.2);
 $box-shadow-active: 0 1px 2px rgba(0, 0, 0, 0.05);
